Bug 104005 - Expert Configuration dialog does not respect finalized configuration values
Summary: Expert Configuration dialog does not respect finalized configuration values
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Options-Dialog-Expert 89501
  Show dependency treegraph
 
Reported: 2016-11-18 10:27 UTC by Andras Timar
Modified: 2023-10-11 15:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2016-11-18 10:27:28 UTC
Description:
Tools - Options - LibreOffice - Advanced pane, Expert Configuration button.
The resulting Expert Configuration dialog does not respect finalized configuration values. This means that when a configuration value is locked down on lower levels of configuration, in this dialog it is still modifiable, and causes program crash (Fatal Error: configmgr modification of finalized item) when user tries to overwrite a locked down value.

Steps to Reproduce:
Lock down a value, and try to change it in Expert Configuration dialog. For example, add create a new file, warnpdf.xcu with the following content, and add it to share/registry/data directory of LibreOffice. 

<?xml version="1.0" encoding="UTF-8"?>
<oor:items xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
<item oor:path="/org.openoffice.Office.Common/Security/Scripting"><prop oor:name="WarnCreatePDF" oor:finalized="true"><value>true</value></prop></item>
<item oor:path="/org.openoffice.Office.Common/Security/Scripting"><prop oor:name="WarnPrintDoc" oor:finalized="true"><value>false</value></prop></item>
<item oor:path="/org.openoffice.Office.Common/Security/Scripting"><prop oor:name="WarnSaveOrSendDoc" oor:finalized="true"><value>false</value></prop></item>
<item oor:path="/org.openoffice.Office.Common/Security/Scripting"><prop oor:name="WarnSignDoc" oor:finalized="true"><value>true</value></prop></item>
</items>


Actual Results:  
You will see that the settings are actually locked down, Tools - Option - LibreOffice - Security pane, Security Options and Warnings section, Options... button. 

However, in Expert config the settings are modifiable.

Expected Results:
When displaying items in Expert Config dialog, the read-only state of config item must be checked. The read-only item must be inaccessible from UI (greyed out) and the lock icon should be there, before the text of config item. 


Reproducible: Always

User Profile Reset: 

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 Cor Nouws 2016-11-18 11:12:40 UTC
(In reply to Andras Timar from comment #0)

> modifiable, and causes program crash (Fatal Error: configmgr modification of
> finalized item) when user tries to overwrite a locked down value.

my daily from 2016-11-18 more freezes when OKing the Options dlg, but I confirm the rest of your report.
Comment 2 QA Administrators 2018-05-08 02:32:41 UTC Comment hidden (noise)
Comment 3 QA Administrators 2020-09-22 03:59:01 UTC Comment hidden (noise)
Comment 4 QA Administrators 2022-09-23 04:30:47 UTC Comment hidden (noise, obsolete)
Comment 5 Commit Notification 2023-05-15 11:32:09 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/efa965969c6d3dfe5745a535605a6b9a482a03bd

tdf#104005 Don't allow changing finalized properties

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.