tdf#104005 Don't allow changing finalized properties

Change-Id: Ic9e42ba6aed2fadd0f28dfc6be0a639cdd16bb34