cui/source/options/optaboutconfig.hxx
@@ -67,7 +67,7 @@ public:
    explicit CuiAboutConfigTabPage(weld::Window* pParent);
    virtual ~CuiAboutConfigTabPage() override;
    void     InsertEntry(const OUString &rPropertyPath, const OUString& rProp, const OUString& rStatus, const OUString& rType, const OUString& rValue,
-                        const weld::TreeIter* pParentEntry, bool bInsertToPrefBox);
+                        const weld::TreeIter* pParentEntry, bool bInsertToPrefBox, bool bIsReadOnly);
    void     Reset();
    void     FillItems(const css::uno::Reference<css::container::XNameAccess>& xNameAccess,
                       const weld::TreeIter* pParentEntry = nullptr, int lineage = 0, bool bLoadAll = false);
